--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
     <meta name="keywords" content="Song, Lyrics, Emotion, Analysis, Sentiment, Valence, Arousal, Dominance, VAD">
     <meta name="author" content="Adam Weiler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">   
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/static/favicon-16x16.png">
     <!--
       site.webmanifest provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" crossorigin="use-credentials">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="%PUBLIC_URL%/static/site.webmanifest" crossorigin="use-credentials">
+    <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>SongFeels</title>
